# Defi-IA-2021

./: .gitignore  CLAUDE.md  GUIDE.md  Makefile  README.md  pyproject.toml  requirements-dl.txt  requirements-fairness.txt  requirements.txt
config/: config.yaml
kaggle/: README.md  kernel-metadata.json  train_transformer_kernel.py
notebooks/: 00_baseline_tfidf_logreg.ipynb  01_fairness_metric_reference.ipynb
reports/: PLAN.md  PRECONISATIONS.md  ROADMAP.md  challenge_brief.txt  classical_sweep.json  error_analysis.md  experiments.md  fairness_pareto.json  fairness_pareto_multiseed.md  fairness_pareto_seed2024.json  fairness_pareto_seed7.json  per_class_comparison.md  threshold_audit.json  threshold_fairness_front.json  threshold_fairness_front.smoke.json  threshold_gain_verification.json
scripts/: ablation_classical.py  aggregate_fairness_seeds.py  artifacts_from_checkpoint.py  audit_threshold_tuning.py  build_ensemble.py  check_convergence.py  classical_tuned_submission.py  compare_per_class.py  cpu_queue.sh  dryrun_postprocessing.py  error_analysis.py  explore_data.py  fairness_pareto.py  final_submission.py  finish_by_deadline.sh  gpu_queue.sh  kaggle_monitor.sh  kaggle_run.sh  night2_queue.sh  sweep_classical.py  test_resume.sh  threshold_fairness_front.py  train_classical.py  train_transformer.py  tune_thresholds.py  verify_threshold_gain.py
src/defi_ia/: __init__.py  io_utils.py  paths.py
src/defi_ia/data/: __init__.py  load.py  split.py
tests/: test_atomic_save.py  test_di_edge_cases.py  test_metrics.py  test_preprocessing.py  test_submission.py
(+11 files in other folders)
